corrected room location

--- a/_events/20170209a.md
+++ b/_events/20170209a.md
@@ -3,12 +3,10 @@ layout: event
 title: "Introduction to Data Visualization in R (week 5)"
 start: 2017-02-09 13:00:00 PST
 end: 2017-02-09 14:30:00 PST
-location: "MESOM 251"
+location: "Hubbs 4500"
 ---
 
 Continuation of the R Users Group **Data Visualization** course.
-
-** NOTE CHANGE IN LOCATION **
 
 Week 5 content:
 
