--- a/_events/20170216.md
+++ b/_events/20170216.md
@@ -3,12 +3,10 @@ layout: event
 title: "Introduction to Data Visualization in R (week 6)"
 start: 2017-02-16 13:00:00 PST
 end: 2017-02-16 14:30:00 PST
-location: "MESOM 251"
+location: "Hubbs 4500"
 ---
 
 Continuation of the R Users Group **Data Visualization** course.
-
-** NOTE CHANGE IN LOCATION **
 
 Week 6 content: 
 
