--- a/_events/20170209a.md
+++ b/_events/20170209a.md
@@ -11,6 +11,6 @@ Continuation of the R Users Group **Data Visualization** course.
 Week 5 content:
 
 * Advanced ggplot geoms and plot types
-	* density plots
-	* maps?
-	* 3D plots?
+    * Advanced ggplot geoms and plots
+    * Various plot tweaks (coordinate transformations)
+    * Multi-panel plots
