OMG, I am terrible at incrementing numbers Also, RRROBOTS announcement

--- a/_events/20170309.md
+++ b/_events/20170309.md
@@ -1,6 +1,6 @@
 ---
 layout: event
-title: "Introduction to Data Visualization in R (week 8)"
+title: "Introduction to Data Visualization in R (week 9)"
 start: 2017-03-02 14:00:00 PST
 end: 2017-03-02 15:00:00 PST
 location: "Hubbs 4500"
@@ -8,7 +8,6 @@ location: "Hubbs 4500"
 
 Continuation of the R Users Group **Data Visualization** course.
 
-Week 8 content: 
+Week 9 content: 
 
-* 3d plots (`rgl`)
-* Animation (`gganimate`) [perhaps?]
+* Shiny (and interactive apps)
