--- a/_events/20170404.md
+++ b/_events/20170404.md
@@ -7,3 +7,12 @@ location: "Vaughan 328"
 ---
 
 First meeting of the **RRROBOTS -- Reproducible Research in R for Ocean Biosciences: Open-science Training Seminar** course.
+
+Topics:
+* Course Overview & Logistics
+* Group Assignments
+* Introduction to Git
+* commits
+* branches
+* GitHub
+* Project Management on GitHub
