--- a/_events/20170417.md
+++ b/_events/20170417.md
@@ -1,9 +1,9 @@
 ---
 layout: event
-title: "BUG Seminar: TBD"
+title: "BUG Seminar: OTU-free community structure, metabolic inference, and meta-'omic analysis with paprica"
 start: 2017-04-17 12:00:00 PST
 end: 2017-04-17 13:00:00 PST
-location: "TBD"
+location: "Hubbs Hall 4500"
 ---
 
 **BUG Monthly Seminar Series**
