updated info on BUG seminar and class meetings

--- a/_events/20170508.md
+++ b/_events/20170508.md
@@ -3,9 +3,9 @@ layout: event
 title: "BUG Seminar: TBD"
 start: 2017-05-08 12:00:00 PST
 end: 2017-05-08 13:00:00 PST
-location: "TBD"
+location: "Hubbs Hall 4500"
 ---
 
 **BUG Monthly Seminar Series**
 
-Dr. Amro Hamdoun
+Please join us this Monday at 12 PM when we will hear from **Dr. Amro Hamdoun** who will be sharing with us some tips on how to present your research. We’re fortunate to have an expert presenter willing to share his techniques and tricks with our community!
